--- a/main.html
+++ b/main.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%" id="table1">
+    <table style="width: 100%; height: 100%">
       <!-- Your code here -->
 		<tr>
 			<td>
-				<table id="table2">
+				<table>
 					<tr>
-						<th>Nested Table 2</th>
+						<th colspan="2">Nested Table 2</th>
 					</tr>
 					<tr>
 						<th>Column 1</th>
@@ -27,7 +27,7 @@
 			</td>
 
 			<td>
-				<table id="table3">
+				<table>
 					<tr>
 					<th>Nested Table 1</th>
 					</tr>
@@ -46,25 +46,25 @@
 
 		<tr>
 			<td>
-				<table id="table4">
+				<table>
 					<tr>
-						<th>Nested Table 3</th>
+						<th colspan="2">Nested Table 3</th>
 					</tr>
 
 					<tr>
-						<td>Nested Table</td>
+						<td><a href="#">Nested Table</a></td>
 						<td>Demo Continued</td>
 					</tr>
 				</table>	
 			</td>
 
 			<td>
-				<table id="table5">
+				<table>
 					<tr>
 						<th>Nested Table 4</th>
 					</tr>
 					<tr>
-						<td>HTML</td>
+						<td style="background-color: black; color: white">HTML</td>
 					</tr>
 				</table>
 			</td>
